services/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      volumes:
        - name: rabbbitmq-data
        - name: rabbbitmq-logs
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbbitmq-data
        - mountPath: /var/log/rabbitmq
          name: rabbbitmq-logs
        resources:
          limits:
            memory: "246Mi"
            cpu: "500m"
        ports:
        - containerPort: 5672
        - containerPort: 15672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - port: 15672
    targetPort: 15672
