services/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-storage 
          persistentVolumeClaim:
            claimName: redis-claim
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        command: ["redis-server"]
        args: ["--save", "60", "1", "--loglevel", "warning"]
        volumeMounts:
        - mountPath: /data
          name: redis-storage
        ports:
        - containerPort: 6379
      priorityClassName: high-priority
---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
