services/ingress-conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kub-ingress
spec:
  rules:
  - host: front.kub-insa.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: back.kub-insa.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
